[metadata]
name = transmission-line
description = Design and draw transmission lines in GDSII format using gdspy.
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Flanigan
author_email = daniel.isaiah.flanigan@gmail.com
url = https://www.github.com/danielflanigan/transmission-line

[options]
package_dir =
    = source
packages = find:
setup_requires =
    setuptools_scm
install_requires =
    gdspy
    matplotlib
    numpy
    scipy
test_suite = test
tests_require = pytest

[options.extras_require]
doc = sphinx; sphinx_rtd_theme

[tool:pytest]
minversion = 3.0
addopts = -ra
testpaths =
    test

[build_sphinx]
all-files = 1
source-dir = doc/source
build-dir = doc/build
